// Vitest Snapshot v1

exports[`ConfigMap > Accessors > Metadata getter 1`] = `
ApiObjectMetadataDefinition {
  "_additionalAttributes": {
    "labels": {
      "prunable": "true",
      "test": "true",
    },
    "name": Lazy {
      "producer": {
        "produce": [Function],
      },
    },
    "namespace": undefined,
  },
  "annotations": {},
  "finalizers": [],
  "labels": {
    "prunable": "true",
    "test": "true",
  },
  "name": Lazy {
    "producer": {
      "produce": [Function],
    },
  },
  "namespace": undefined,
  "ownerReferences": [],
}
`;

exports[`ConfigMap > Accessors > Throws when trying to set binaryData key on data 1`] = `"ConfigMap key \\"test\\" is already used in binaryData"`;

exports[`ConfigMap > Accessors > Throws when trying to set data key on binaryData 1`] = `"ConfigMap key \\"test\\" is already used in data"`;

exports[`ConfigMap > Loading files > Setting value from binary file's contents 1`] = `
[
  {
    "apiVersion": "v1",
    "binaryData": {
      "file.bin": "0101010",
    },
    "kind": "ConfigMap",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-bmgdfkhtdc",
    },
  },
]
`;

exports[`ConfigMap > Loading files > Setting value from binary file's contents with custom key 1`] = `
[
  {
    "apiVersion": "v1",
    "binaryData": {
      "greeting.bin": "0101010",
    },
    "kind": "ConfigMap",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-d6tg59df79",
    },
  },
]
`;

exports[`ConfigMap > Loading files > Setting value from file's contents 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "file.txt": "hello world!",
    },
    "kind": "ConfigMap",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-9d44k9f5tb",
    },
  },
]
`;

exports[`ConfigMap > Loading files > Setting value from file's contents with custom key 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "greeting.txt": "hello world!",
    },
    "kind": "ConfigMap",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-g88dtg6tg9",
    },
  },
]
`;

exports[`ConfigMap > Props > ConfigMap from props 1`] = `
[
  {
    "apiVersion": "v1",
    "binaryData": {
      "bin": "010101",
    },
    "data": {
      "foo": "bar",
    },
    "immutable": true,
    "kind": "ConfigMap",
    "metadata": {
      "annotations": {
        "annotation": "test",
      },
      "labels": {
        "label": "test",
        "prunable": "true",
      },
      "name": "test-c8eb60f8-8598d5k4th",
    },
  },
]
`;

exports[`ConfigMap > Props > Empty ConfigMap 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ConfigMap",
    "metadata": {
      "labels": {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-hfh6t42gd2",
    },
  },
]
`;
